--- a/ChatApp/Base.lproj/Main.storyboard
+++ b/ChatApp/Base.lproj/Main.storyboard
@@ -134,6 +134,8 @@
                                 <subviews>
                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Say something..." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="qSG-wC-GeH">
                                         <rect key="frame" x="8" y="10" width="250" height="30"/>
+                                        <color key="backgroundColor" red="0.57647058819999997" green="0.7843137255" blue="0.94117647059999998" alpha="1" colorSpace="calibratedRGB"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
@@ -142,6 +144,7 @@
                                         <constraints>
                                             <constraint firstAttribute="width" constant="46" id="8L8-eb-5Qr"/>
                                         </constraints>
+                                        <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <state key="normal" title="Send"/>
                                         <connections>
                                             <action selector="onSendButtonTapped:" destination="u6l-ck-hB2" eventType="touchUpInside" id="IDx-eQ-dgH"/>
@@ -158,7 +161,7 @@
                                     <constraint firstItem="qSG-wC-GeH" firstAttribute="centerY" secondItem="KGs-3g-BFC" secondAttribute="centerY" id="tMf-3S-hkz"/>
                                 </constraints>
                             </view>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="68" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="LVO-do-dEC">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="68" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="LVO-do-dEC">
                                 <rect key="frame" x="0.0" y="114" width="320" height="454"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
@@ -170,21 +173,21 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Username" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LLd-Mu-ADW">
-                                                    <rect key="frame" x="8" y="0.0" width="66.5" height="17"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <rect key="frame" x="16" y="8" width="62" height="16"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                    <color key="textColor" red="0.39607843139999999" green="0.67843137249999996" blue="0.8980392157" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hKf-ut-kqF">
-                                                    <rect key="frame" x="8" y="25" width="39.5" height="19.5"/>
+                                                    <rect key="frame" x="16" y="32" width="39.5" height="19.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <color key="textColor" red="0.031372549020000001" green="0.41176470590000003" blue="0.70196078429999997" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Timestamp" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gak-Qa-it3">
-                                                    <rect key="frame" x="240" y="0.0" width="72" height="17"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <rect key="frame" x="244.5" y="8" width="67.5" height="16"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                    <color key="textColor" red="0.57647058819999997" green="0.7843137255" blue="0.94117647059999998" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
@@ -193,10 +196,10 @@
                                                 <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="hKf-ut-kqF" secondAttribute="bottom" constant="8" id="JgZ-6B-04j"/>
                                                 <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="hKf-ut-kqF" secondAttribute="trailing" constant="8" id="MXm-7I-GCh"/>
                                                 <constraint firstItem="hKf-ut-kqF" firstAttribute="leading" secondItem="LLd-Mu-ADW" secondAttribute="leading" id="Uui-vT-NQh"/>
-                                                <constraint firstItem="LLd-Mu-ADW" firstAttribute="leading" secondItem="ZNz-BP-4et" secondAttribute="leading" constant="8" id="dzc-1X-tsY"/>
+                                                <constraint firstItem="LLd-Mu-ADW" firstAttribute="leading" secondItem="ZNz-BP-4et" secondAttribute="leading" constant="16" id="dzc-1X-tsY"/>
                                                 <constraint firstItem="hKf-ut-kqF" firstAttribute="top" secondItem="Gak-Qa-it3" secondAttribute="bottom" constant="8" id="gV2-84-nbe"/>
                                                 <constraint firstItem="Gak-Qa-it3" firstAttribute="baseline" secondItem="LLd-Mu-ADW" secondAttribute="baseline" id="hgd-Ib-zRt"/>
-                                                <constraint firstItem="LLd-Mu-ADW" firstAttribute="top" secondItem="ZNz-BP-4et" secondAttribute="top" id="nDM-Qq-fVA"/>
+                                                <constraint firstItem="LLd-Mu-ADW" firstAttribute="top" secondItem="ZNz-BP-4et" secondAttribute="top" constant="8" id="nDM-Qq-fVA"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
